Refactor Module 2 notebooks to enhance content clarity and organization. Added a new "Tree of Thoughts" section to Activity 2.4, allowing users to explore multiple solution approaches and evaluate them using weighted rubrics. Updated README to reflect changes, including renaming sections for better alignment with the new content. Removed the outdated "Inner Monologue" references and improved the evaluation system to support the new tactics, ensuring a cohesive learning experience.

--- a/01-course/module-02-fundamentals/2.5-hands-on-practice.ipynb
+++ b/01-course/module-02-fundamentals/2.5-hands-on-practice.ipynb
@@ -484,18 +484,30 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Activity 2.4: LLM-as-Judge & Inner Monologue\n",
     "\n",
-    "**Goal:** Create a 3-step self-improvement loop with clean final output.\n",
+    "### Activity 2.4: Tree of Thoughts and LLM-as-Judge\n",
+    "\n",
+    "**Goal:** Explore multiple solution approaches, evaluate them with weighted rubrics, and select the best.\n",
     "\n",
     "<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n",
     "<strong>📝 Success Criteria:</strong><br><br>\n",
     "Your solution should have:\n",
     "<ul>\n",
-    "<li>Step 1: Initial code generation</li>\n",
-    "<li>Step 2: Critique with weighted rubric (e.g., Security 40%, Correctness 30%, Quality 30%)</li>\n",
-    "<li>Step 3: Improved code with &lt;thinking&gt; and &lt;output&gt; tags</li>\n",
+    "<li><strong>Part 1 - Tree of Thoughts:</strong> Generate 3 different implementation approaches (A, B, C)</li>\n",
+    "<li><strong>Part 2 - LLM-as-Judge:</strong> Evaluate all 3 approaches using a weighted rubric (e.g., Security 40%, Performance 30%, Maintainability 30%)</li>\n",
+    "<li><strong>Part 3 - Winner Selection:</strong> Choose the best approach based on evaluation scores</li>\n",
+    "<li><strong>Part 4 (Optional):</strong> Self-improvement loop to refine the winning approach</li>\n",
     "</ul>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"padding:12px; background:#fef3c7; border-radius:6px; border-left:4px solid #f59e0b; color:#78350f; margin-top:12px;\">\n",
+    "<strong>💡 What makes this powerful:</strong><br><br>\n",
+    "This activity combines TWO tactics:\n",
+    "<ul>\n",
+    "<li>🌳 <strong>Tree of Thoughts</strong> explores multiple solution paths in parallel</li>\n",
+    "<li>⚖️ <strong>LLM-as-Judge</strong> objectively compares them with weighted criteria</li>\n",
+    "</ul>\n",
+    "Together, they help you make informed architecture decisions instead of going with the first idea that works!\n",
     "</div>"
    ]
   },
@@ -507,45 +519,246 @@
    "source": [
     "requirement = \"Create a function to validate and sanitize email addresses\"\n",
     "\n",
-    "# YOUR SOLUTION: Create a 3-step self-improvement loop\n",
-    "# TODO: Step 1 - Generate, Step 2 - Judge with rubric, Step 3 - Improve with inner monologue\n",
+    "# ============================================================================\n",
+    "# PART 1: TREE OF THOUGHTS - Generate Multiple Approaches\n",
+    "# ============================================================================\n",
     "\n",
-    "# # STEP 1: Generate initial code\n",
-    "# step1_messages = [\n",
-    "#     # Your solution here\n",
-    "# ]\n",
-    "# \n",
-    "# initial_code = get_chat_completion(step1_messages)\n",
-    "# print(\"STEP 1 - Initial Code:\")\n",
-    "# print(initial_code)\n",
-    "# print(\"\\n\" + \"=\"*70 + \"\\n\")\n",
-    "#\n",
-    "# # STEP 2: Critique with weighted criteria (LLM-as-Judge)\n",
-    "# step2_messages = [\n",
-    "#     # Your solution here - include weighted rubric\n",
-    "# ]\n",
-    "# \n",
-    "# critique = get_chat_completion(step2_messages)\n",
-    "# print(\"STEP 2 - Critique:\")\n",
-    "# print(critique)\n",
-    "# print(\"\\n\" + \"=\"*70 + \"\\n\")\n",
-    "#\n",
-    "# # STEP 3: Improve with inner monologue\n",
-    "# step3_messages = [\n",
-    "#     # Your solution here - use <thinking> and <output> tags\n",
-    "# ]\n",
-    "# \n",
-    "# improved = get_chat_completion(step3_messages)\n",
-    "# \n",
-    "# # Extract only the <output> section\n",
-    "# import re\n",
-    "# output_match = re.search(r'<output>(.*?)</output>', improved, re.DOTALL)\n",
-    "# if output_match:\n",
-    "#     print(\"STEP 3 - Improved Code (Clean Output):\")\n",
-    "#     print(output_match.group(1).strip())\n",
+    "print(\"=\" * 70)\n",
+    "print(\"🌳 TREE OF THOUGHTS: Exploring Multiple Approaches\")\n",
+    "print(\"=\" * 70)\n",
+    "print()\n",
+    "\n",
+    "# STEP 1: Generate THREE different approaches\n",
+    "approaches = {}\n",
+    "\n",
+    "# TODO 1.1: Generate Approach A - Regex-based validation\n",
+    "# Hint: Ask AI to create email validator using REGEX pattern matching\n",
+    "print(\"Generating Approach A: Regex-based...\")\n",
+    "step1a_messages = [\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
+    "        \"content\": \"TODO: Add role here (e.g., 'You are a Python developer specializing in regex patterns...')\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": f\"\"\"TODO: Write prompt here\n",
+    "        \n",
+    "Hints:\n",
+    "- Ask for regex-based email validation\n",
+    "- Request code in <code></code> tags\n",
+    "- Label as \"Approach A: Regex\"\n",
+    "\"\"\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# approaches['A'] = get_chat_completion(step1a_messages)\n",
+    "# print(approaches['A'][:200] + \"...\\n\")\n",
+    "\n",
+    "# TODO 1.2: Generate Approach B - Library-based validation\n",
+    "# Hint: Ask AI to use a validation library (like email-validator pattern)\n",
+    "print(\"Generating Approach B: Library-based...\")\n",
+    "step1b_messages = [\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
+    "        \"content\": \"TODO: Add role here (e.g., 'You are a Python developer specializing in libraries...')\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": f\"\"\"TODO: Write prompt here\n",
+    "\n",
+    "Hints:\n",
+    "- Ask for library-based approach\n",
+    "- Mention using library patterns for validation\n",
+    "- Request code in <code></code> tags\n",
+    "- Label as \"Approach B: Library\"\n",
+    "\"\"\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# approaches['B'] = get_chat_completion(step1b_messages)\n",
+    "# print(approaches['B'][:200] + \"...\\n\")\n",
+    "\n",
+    "# TODO 1.3: Generate Approach C - Custom parser validation\n",
+    "# Hint: Ask AI to manually parse and validate email parts\n",
+    "print(\"Generating Approach C: Custom parser...\")\n",
+    "step1c_messages = [\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
+    "        \"content\": \"TODO: Add role here (e.g., 'You are a Python developer specializing in parsing...')\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": f\"\"\"TODO: Write prompt here\n",
+    "\n",
+    "Hints:\n",
+    "- Ask for custom parsing approach\n",
+    "- Request manual validation of email components\n",
+    "- Request code in <code></code> tags\n",
+    "- Label as \"Approach C: Custom Parser\"\n",
+    "\"\"\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# approaches['C'] = get_chat_completion(step1c_messages)\n",
+    "# print(approaches['C'][:200] + \"...\\n\")\n",
+    "\n",
+    "# ============================================================================\n",
+    "# PART 2: LLM-AS-JUDGE - Compare All Approaches\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"👨‍⚖️ LLM-AS-JUDGE: Evaluating All Approaches\")\n",
+    "print(\"=\" * 70)\n",
+    "print()\n",
+    "\n",
+    "# TODO 2: Create comparative evaluation prompt with weighted rubric\n",
+    "# Hint: Ask AI to score each approach on Security (40%), Performance (30%), Maintainability (30%)\n",
+    "step2_messages = [\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
+    "        \"content\": \"TODO: Add role here (e.g., 'You are a senior software architect evaluating...')\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": f\"\"\"TODO: Write comparative evaluation prompt here\n",
+    "\n",
+    "Hints:\n",
+    "- Include all 3 approaches in <approach_a>, <approach_b>, <approach_c> tags\n",
+    "- Define weighted rubric:\n",
+    "  * Security (40%): Injection vulnerabilities, edge cases\n",
+    "  * Performance (30%): Speed, resource usage\n",
+    "  * Maintainability (30%): Code clarity, ease of modification\n",
+    "- Ask for scores (0-10) for each criterion\n",
+    "- Request weighted total calculation\n",
+    "- Ask for clear winner recommendation\n",
+    "- Use structured XML tags for easy parsing\n",
+    "\"\"\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# evaluation = get_chat_completion(step2_messages)\n",
+    "# print(evaluation)\n",
+    "# print()\n",
+    "\n",
+    "# ============================================================================\n",
+    "# PART 3: SELECT WINNER - Extract Best Approach\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"🏆 SELECTING WINNER\")\n",
+    "print(\"=\" * 70)\n",
+    "print()\n",
+    "\n",
+    "# TODO 3: Parse the evaluation to find the winner\n",
+    "# Hint: Use regex to extract \"Winner: Approach [A/B/C]\" from evaluation\n",
+    "import re\n",
+    "\n",
+    "# winner_match = re.search(r'Winner: Approach ([ABC])', evaluation)\n",
+    "# if winner_match:\n",
+    "#     winner = winner_match.group(1)\n",
+    "#     print(f\"✓ Winning Approach: {winner}\")\n",
+    "#     winning_code = approaches[winner]\n",
     "# else:\n",
-    "#     print(\"STEP 3 - Improved Code:\")\n",
-    "#     print(improved)"
+    "#     winner = 'A'\n",
+    "#     winning_code = approaches['A']\n",
+    "#     print(\"✓ Defaulting to Approach A\")\n",
+    "\n",
+    "# print()\n",
+    "\n",
+    "# ============================================================================\n",
+    "# PART 4: SELF-IMPROVEMENT - Refine the Winner\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"🔧 SELF-IMPROVEMENT: Refining the Winner\")\n",
+    "print(\"=\" * 70)\n",
+    "print()\n",
+    "\n",
+    "# TODO 4.1: Create critique prompt for the winning approach\n",
+    "# Hint: Ask AI to find issues in security, performance, code quality\n",
+    "print(\"Step 4a: AI critiques the winning approach...\")\n",
+    "step4a_messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": f\"\"\"TODO: Write critique prompt here\n",
+    "\n",
+    "Hints:\n",
+    "- Pass in the winning_code\n",
+    "- Ask AI to critique its own winning solution\n",
+    "- Look for: security issues, performance optimizations, code quality\n",
+    "- Request severity ratings: CRITICAL/HIGH/MEDIUM/LOW\n",
+    "- Wrap output in <critique></critique> tags\n",
+    "\"\"\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# critique = get_chat_completion(step4a_messages)\n",
+    "# print(critique)\n",
+    "# print()\n",
+    "\n",
+    "# TODO 4.2: Create improvement prompt to refine the code\n",
+    "# Hint: Ask AI to focus on security and performance improvement using <improved_code>\n",
+    "print(\"Step 4b: AI improves based on its own critique...\")\n",
+    "step4b_messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": f\"\"\"TODO: Write improvement prompt here\n",
+    "\n",
+    "Hints:\n",
+    "- Include both winning_code and critique\n",
+    "- Ask to fix ALL identified issues\n",
+    "- Request improved code in <improved_code></improved_code> tags\n",
+    "- Code should address all issues from the critique\n",
+    "- Focus on security, performance, and code quality improvements\n",
+    "\n",
+    "\"\"\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# improved = get_chat_completion(step4b_messages)\n",
+    "\n",
+    "# TODO 4.3: Extract clean output using regex\n",
+    "# Hint: Search for content between <output> and </output> tags\n",
+    "# output_match = re.search(r'<output>(.*?)</output>', improved, re.DOTALL)\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"✨ FINAL RESULT: Best Approach, Refined and Production-Ready\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# if output_match:\n",
+    "#     final_code = output_match.group(1).strip()\n",
+    "#     print(final_code)\n",
+    "# else:\n",
+    "#     print(improved)\n",
+    "\n",
+    "# ============================================================================\n",
+    "# SUMMARY\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"📊 WHAT JUST HAPPENED?\")\n",
+    "print(\"=\" * 70)\n",
+    "print(\"\"\"\n",
+    "🌳 Tree of Thoughts:\n",
+    "   ✓ Generated 3 different approaches (A, B, C)\n",
+    "   ✓ Explored multiple solution paths\n",
+    "\n",
+    "👨‍⚖️ LLM-as-Judge:\n",
+    "   ✓ Evaluated all 3 with weighted rubric\n",
+    "   ✓ Selected winner based on scores\n",
+    "   \n",
+    "🔄 Self-Improvement:\n",
+    "   ✓ Critiqued the winner\n",
+    "   ✓ Fixed identified issues\n",
+    "   ✓ Produced production-ready code\n",
+    "\n",
+    "💡 Key Insight:\n",
+    "   By combining ToT (exploration) + LLM-as-Judge (evaluation) + \n",
+    "   Self-Improvement (refinement), we get the BEST possible solution!\n",
+    "   \n",
+    "📈 Total API Calls: ~7-8 (vs 1 for simple prompt)\n",
+    "   Trade-off: Higher cost, but significantly better quality\n",
+    "\"\"\")"
    ]
   },
   {
@@ -557,8 +770,13 @@
     "#### 📊 Evaluate Activity 2.4\n",
     "\n",
     "<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n",
-    "<strong>💡 Evaluate Steps 2 & 3!</strong><br><br>\n",
-    "This activity has THREE steps, but we only evaluate Step 2 (LLM-as-Judge) and Step 3 (Inner Monologue) below.\n",
+    "<strong>💡 Evaluate Both Parts!</strong><br><br>\n",
+    "This activity combines two tactics, so you'll evaluate:<br>\n",
+    "<ul>\n",
+    "<li><strong>Part 1:</strong> Tree of Thoughts (generating 3 alternative approaches)</li>\n",
+    "<li><strong>Part 2:</strong> LLM-as-Judge (evaluating them with weighted rubrics)</li>\n",
+    "</ul>\n",
+    "Parts 3 & 4 are implementation/refinement - focus your prompts on exploration (Part 1) and evaluation (Part 2).\n",
     "</div>"
    ]
   },
@@ -569,30 +787,30 @@
    "outputs": [],
    "source": [
     "# ✅ EVALUATE YOUR ACTIVITY 2.4 SOLUTION\n",
-    "# Uncomment after completing all three steps above\n",
+    "# Uncomment after completing the exercise above\n",
     "\n",
-    "# STEP 2 Evaluation (LLM-as-Judge)\n",
+    "# PART 1: Tree of Thoughts - Evaluate the approach generation prompts\n",
+    "# print(evaluate_prompt(\n",
+    "#     messages=step1a_messages + step1b_messages + step1c_messages,\n",
+    "#     activity_name=\"Activity 2.4 Part 1: Tree of Thoughts (Generate Alternatives)\",\n",
+    "#     expected_tactics=[\"Tree of Thoughts\"]\n",
+    "# ))\n",
+    "\n",
+    "# PART 2: LLM-as-Judge - Evaluate the comparative evaluation prompt\n",
     "# print(evaluate_prompt(\n",
     "#     messages=step2_messages,\n",
-    "#     activity_name=\"Activity 2.4 Step 2: LLM-as-Judge\",\n",
+    "#     activity_name=\"Activity 2.4 Part 2: LLM-as-Judge (Comparative Evaluation)\",\n",
     "#     expected_tactics=[\"LLM-as-Judge\"]\n",
     "# ))\n",
     "\n",
-    "# STEP 3 Evaluation (Inner Monologue)\n",
-    "# print(evaluate_prompt(\n",
-    "#     messages=step3_messages,\n",
-    "#     activity_name=\"Activity 2.4 Step 3: Inner Monologue\",\n",
-    "#     expected_tactics=[\"Inner Monologue\"]\n",
-    "# ))\n",
-    "\n",
-    "# 🎯 SKILLS YOU CAN CHECK OFF IF BOTH STEPS SCORE >= 80:\n",
-    "# ✅ Skill #13: I can create evaluation rubrics with weighted criteria for code assessment\n",
-    "# ✅ Skill #14: I can implement self-critique loops for iterative improvement\n",
-    "# ✅ Skill #15: I can separate thinking from output using <thinking> and <output> tags\n",
-    "# ✅ Skill #16: I can extract clean outputs while logging reasoning for debugging\n",
+    "# 🎯 SKILLS YOU CAN CHECK OFF IF SCORE >= 80:\n",
+    "# ✅ Skill #13: I can generate multiple alternative approaches to explore solution space\n",
+    "# ✅ Skill #14: I can create evaluation rubrics with weighted criteria for objective comparison\n",
+    "# ✅ Skill #15: I can use LLM-as-Judge to compare alternatives and select the best\n",
+    "# ✅ Skill #16: I can combine Tree of Thoughts + LLM-as-Judge for informed decision-making\n",
     "\n",
     "# 🎉 CONGRATULATIONS! If you completed all 4 activities with scores >= 80,\n",
-    "#    you've mastered all 16 skills in Module 2! Check them off in the tracker below!"
+    "# you've mastered all 16 skills in Module 2! Check them off in the tracker below!"
    ]
   },
   {
@@ -613,6 +831,13 @@
    "source": [
     "---\n",
     "\n",
+    "<div style=\"padding:16px; background:linear-gradient(135deg, #a8edea 0%, #fed6e3 100%); border-radius:10px; color:#2d3748; text-align:center; box-shadow:0 4px 15px rgba(168,237,234,0.3);\">\n",
+    "  <strong style=\"font-size:1.05em;\">🎯 Keep practicing to master all 8 tactics!</strong><br>\n",
+    "  <span style=\"font-size:0.92em; opacity:0.9; margin-top:4px; display:block;\">Each skill you check off brings you closer to becoming a prompt engineering expert.</span>\n",
+    "</div>\n",
+    "\n",
+    "---\n",
+    "\n",
     "<div style=\"padding:16px; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius:10px; color:#fff; text-align:center; box-shadow:0 4px 15px rgba(102,126,234,0.3);\">\n",
     "  <strong style=\"font-size:1.05em;\">🎉 Excellent work! You've completed all practice activities.</strong><br>\n",
     "  <span style=\"font-size:0.92em; opacity:0.95; margin-top:4px; display:block;\">Take a moment to reflect on what you've learned before moving forward.</span>\n",
@@ -627,12 +852,16 @@
     "You've practiced applying all 8 core prompt engineering tactics independently through real-world scenarios.\n",
     "</div>\n",
     "\n",
+    "\n",
+    "\n",
     "### What You Practiced\n",
     "\n",
     "**Activity 2.1:** Role Prompting + Structured Inputs  \n",
     "**Activity 2.2:** Few-Shot Examples + Chain-of-Thought  \n",
     "**Activity 2.3:** Reference Citations + Prompt Chaining  \n",
-    "**Activity 2.4:** LLM-as-Judge + Inner Monologue\n",
+    "**Activity 2.4:** LLM-as-Judge + Tree of Thoughts\n",
+    "\n",
+    "\n",
     "\n",
     "### The 8 Tactics\n",
     "\n",
@@ -643,7 +872,7 @@
     "5. 📖 **Reference Citations** — Ground responses in actual documentation\n",
     "6. 🔗 **Prompt Chaining** — Break complex tasks into sequential workflows\n",
     "7. ⚖️ **LLM-as-Judge** — Create evaluation rubrics and self-critique loops\n",
-    "8. 🤫 **Inner Monologue** — Separate reasoning from clean final outputs\n",
+    "8. 🌳 **Tree of Thoughts** — Explore multiple solution paths and select the best\n",
     "\n",
     "<div style=\"padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#1e40af;\">\n",
     "<strong>📝 Skills Acquired</strong><br><br>\n",
