Refactor Module 3 Notebooks for Enhanced Clarity and Structure
- Updated `3.1-setup-and-introduction.ipynb` to improve the connection setup process, including clearer instructions and a more structured approach to loading shared utilities.
- Revised `3.2-code-review-automation.ipynb` to replace the guided practice with a focus on creating structured code review templates, emphasizing the importance of organization and critical thinking in AI reviews.
- Enhanced `setup_utils.py` to return a tuple from the `test_connection` function, providing more informative feedback on connection status.
- Overall improvements aim to streamline user experience and reinforce learning objectives across the module.

--- a/01-course/module-03-applications/3.1-setup-and-introduction.ipynb
+++ b/01-course/module-03-applications/3.1-setup-and-introduction.ipynb
@@ -76,8 +76,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: Load Setup Utilities\n",
+    "### Step 2: Connect to AI Model\n",
     "\n",
+    "We moved provider configuration into `setup_utils.py` so every notebook can reuse the same helpers.\n",
+    "Run the cell below to load the shared utilities, confirm your active provider, and expose helper functions for switching providers when needed.\n",
+    "\n",
+    "**What this does:**\n",
+    "- imports `get_chat_completion` so the rest of the module can call the AI\n",
+    "- prints the current provider and default model\n",
+    "- exposes helper functions for testing activities and working with templates\n",
+    "\n",
+    "<div style=\"padding:12px; background:#fef3c7; border-radius:6px; border-left:4px solid #f59e0b; color:#78350f;\">\n",
+    "<style>\n",
+    "code {\n",
+    "  font-family: Consolas,\"courier new\";\n",
+    "  color:rgb(238, 13, 13);\n",
+    "  background-color: #f1f1f1;\n",
+    "  padding: 2px;\n",
+    "  font-size: 110%;\n",
+    "}\n",
+    "</style>\n",
+    "<strong>💡 Tip:</strong><br><br>By default we use the GitHub Copilot proxy running on <code>http://localhost:7711</code>. If you need direct OpenAI or CircuIT access, configure it in <code>setup_utils.py</code>.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from setup_utils import (\n",
+    "    get_chat_completion,\n",
+    "    get_default_model,\n",
+    "    test_connection,\n",
+    "    test_activity,\n",
+    "    test_activity_3_2,\n",
+    "    test_activity_3_3,\n",
+    "    test_activity_3_4,\n",
+    "    get_refactor_judge_scenario,\n",
+    "    list_activities,\n",
+    ")\n",
+    "\n",
+    "print('✅ Module 3 setup utilities loaded.')\n",
+    "print(f'🤖 Current provider: {test_connection.__module__.split(\".\")[0].upper()} (default model: {get_default_model()})')\n",
+    "print('📡 Activity testing functions available')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optional: Configure AI Provider\n",
+    "\n",
+    "- The default configuration uses GitHub Copilot proxy on `http://localhost:7711`\n",
+    "- To use direct OpenAI API or CircuIT, edit the configuration in `setup_utils.py`\n",
+    "- See [GitHub-Copilot-2-API/README.md](../../GitHub-Copilot-2-API/README.md) for proxy setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Test Connection\n",
+    "\n",
+    "Let's test that everything is working before we begin:\n",
+    "\n",
+    "<div style=\"padding:12px; background:#fef3c7; border-radius:6px; border-left:4px solid #f59e0b; color:#78350f;\">\n",
+    "<strong>💡 Tip:</strong><br><br>If you see long AI responses and the output shows \"Output is truncated. View as a scrollable element\" - <strong>click that link</strong> to see the full response in a scrollable view!\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "success, response = test_connection()\n",
+    "\n",
+    "if success:\n",
+    "    print('🎉 Module 3 setup verified! Ready to apply tactics to SDLC workflows.')\n",
+    "else:\n",
+    "    print('⚠️ The connection responded unexpectedly. If you changed providers, double-check credentials in setup_utils.py.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"margin-top:16px; color:#15803d; padding:12px; background:#dcfce7; border-radius:6px; border-left:4px solid #22c55e;\">\n",
     "<style>\n",
     "code {\n",
@@ -88,76 +175,71 @@
     "  font-size: 110%;\n",
     "}\n",
     "</style>\n",
-    "<strong>💡 New Approach:</strong> <br><br>\n",
-    "We've extracted all setup code into <code>setup_utils.py</code> - a reusable module! This means:\n",
+    "<strong>💡 What's Available?</strong> <br><br>\n",
+    "The <code>setup_utils.py</code> module provides these functions: <br><br>\n",
+    "<strong>Core Functions:</strong>\n",
     "<ul>\n",
-    "<li>✅ Setup runs once, works everywhere</li>\n",
-    "<li>✅ Sections 3.2, 3.3, and 3.4 just import and go</li>\n",
-    "<li>✅ Includes helper functions for testing activities</li>\n",
+    "<li><code>get_chat_completion(messages)</code> - Send prompts to AI</li>\n",
+    "<li><code>get_default_model()</code> - Get current model name</li>\n",
+    "<li><code>test_connection()</code> - Test AI connection</li>\n",
     "</ul>\n",
-    "</div>\n",
     "\n",
-    "<div style=\"margin-top:16px; color:#78350f; padding:12px; background:#fef3c7; border-radius:6px; border-left:4px solid #f59e0b;\">\n",
-    "<strong>💡 Note:</strong> <br><br>\n",
-    "The code below runs on your local machine and connects to AI services over the internet.\n",
-    "</div>\n",
+    "<strong>Activity Testing Functions:</strong>\n",
+    "<ul>\n",
+    "<li><code>test_activity(file, code, variables)</code> - Test any activity template</li>\n",
+    "<li><code>test_activity_3_2(code, variables)</code> - Quick test for Activity 3.2</li>\n",
+    "<li><code>test_activity_3_3(code, variables)</code> - Quick test for Activity 3.3</li>\n",
+    "<li><code>test_activity_3_4(variables)</code> - Quick test for Activity 3.4 (Advanced)</li>\n",
+    "<li><code>get_refactor_judge_scenario()</code> - Get test data for Activity 3.4</li>\n",
+    "<li><code>list_activities()</code> - Show available activities</li>\n",
+    "</ul>\n",
     "\n",
-    "**Configure your AI provider:**\n",
-    "- **Option A: GitHub Copilot API (local proxy)** ⭐ **Recommended**\n",
-    "  - Supports both Claude and OpenAI models\n",
-    "  - No API keys needed\n",
-    "  - Follow [GitHub-Copilot-2-API/README.md](../../GitHub-Copilot-2-API/README.md)\n",
-    "  \n",
-    "- **Option B/C:** Edit `setup_utils.py` if using OpenAI API or CircuIT directly\n"
+    "These will be used throughout Sections 3.2, 3.3, and 3.4!\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Load the setup utilities module\n",
-    "from setup_utils import *\n",
+    "## ✅ Setup Complete!\n",
     "\n",
-    "print(\"✅ Setup utilities loaded successfully!\")\n",
-    "print(f\"🤖 Provider: {PROVIDER.upper()}\")\n",
-    "print(f\"📝 Default model: {get_default_model()}\")\n",
-    "print()\n",
-    "\n",
-    "# Test the connection\n",
-    "print(\"🧪 Testing connection...\")\n",
-    "if test_connection():\n",
-    "    print()\n",
-    "    print(\"=\"*70)\n",
-    "    print(\"🎉 Setup complete! You're ready to continue.\")\n",
-    "    print(\"=\"*70)\n",
-    "else:\n",
-    "    print()\n",
-    "    print(\"⚠️ Connection test failed. Please check:\")\n",
-    "    print(\"   1. Is GitHub Copilot proxy running on port 7711?\")\n",
-    "    print(\"   2. Did you follow the setup instructions?\")\n"
+    "<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:20px; border-radius:8px; margin:24px 0; color:#000000;\">\n",
+    "<style>\n",
+    "code {\n",
+    "  font-family: Consolas,\"courier new\";\n",
+    "  color:rgb(238, 13, 13);\n",
+    "  background-color: #f1f1f1;\n",
+    "  padding: 2px;\n",
+    "  font-size: 110%;\n",
+    "}\n",
+    "</style>\n",
+    "<strong style=\"color:#166534;\">🎉 You're ready to go!</strong><br><br>\n",
+    "You've installed dependencies, loaded shared helpers, and verified connectivity.\n",
+    "<br><br>\n",
+    "✅ <strong style=\"color:#166534;\">AI connection</strong> responding as expected<br>\n",
+    "✅ <strong style=\"color:#166534;\">Shared utilities</strong> imported (<code>setup_utils.py</code>)<br>\n",
+    "✅ <strong style=\"color:#166534;\">Activity helpers</strong> ready for hands-on practice<br>\n",
+    "✅ <strong style=\"color:#166534;\">Testing functions</strong> available for template validation<br>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<div style=\"margin-top:16px; color:#15803d; padding:12px; background:#dcfce7; border-radius:6px; border-left:4px solid #22c55e;\">\n<style>\ncode {\n  font-family: Consolas,\"courier new\";\n  color:rgb(238, 13, 13);\n  background-color: #f1f1f1;\n  padding: 2px;\n  font-size: 110%;\n}\n</style>\n<strong>💡 What's Available?</strong> <br><br>\nThe <code>setup_utils.py</code> module provides these functions: <br><br>\n<strong>Core Functions:</strong>\n<ul>\n<li><code>get_chat_completion(messages)</code> - Send prompts to AI</li>\n<li><code>get_default_model()</code> - Get current model name</li>\n<li><code>test_connection()</code> - Test AI connection</li>\n</ul>\n\n<strong>Activity Testing Functions:</strong>\n<ul>\n<li><code>test_activity(file, code, variables)</code> - Test any activity template</li>\n<li><code>test_activity_3_2(code, variables)</code> - Quick test for Activity 3.2</li>\n<li><code>test_activity_3_3(code, variables)</code> - Quick test for Activity 3.3</li>\n<li><code>test_activity_3_4(variables)</code> - Quick test for Activity 3.4 (Advanced)</li>\n<li><code>get_refactor_judge_scenario()</code> - Get test data for Activity 3.4</li>\n<li><code>list_activities()</code> - Show available activities</li>\n</ul>\n\nThese will be used throughout Sections 3.2, 3.3, and 3.4!\n</div>\n\n"
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": "## 🎯 Applying Prompt Engineering to SDLC Tasks\n\n---\n\n### Introduction: From Tactics to Real-World Applications\n\n#### 🚀 Ready to Transform Your Development Workflow?\n\nYou've successfully mastered the core tactics in Module 2. Now comes the exciting part - **applying these techniques to real-world software engineering challenges** that you face every day.\n\nThink of what you've accomplished so far as **learning individual martial arts moves**. Now we're going to **choreograph them into powerful combinations** that solve actual development problems.\n\n#### 👨‍💻 What You'll Build in the Core Sections\n\nIn Sections 3.2 and 3.3, you'll discover **how to combine tactics strategically** to build production-ready prompts for critical SDLC tasks:\n\n<div style=\"display: grid; grid-template-columns: repeat(2, 1fr); gap: 16px; margin: 20px 0;\">\n\n<div style=\"background: #f8fafc; border: 2px solid #3b82f6; border-radius: 8px; padding: 16px; text-align: center; color: #000000;\">\n<strong>🔍 Code Review Automation</strong><br>\n<em>Multi-dimensional reviews with security, performance, and quality checks</em>\n</div>\n\n<div style=\"background: #f8fafc; border: 2px solid #3b82f6; border-radius: 8px; padding: 16px; text-align: center; color: #000000;\">\n<strong>🧪 Test Generation Automation</strong><br>\n<em>Requirements analysis, ambiguity detection, and comprehensive test specs</em>\n</div>\n\n</div>\n\n#### ⭐ Optional Advanced Learning\n\nWant to go deeper? Section 3.4 (optional) teaches advanced evaluation techniques:\n\n<div style=\"display: grid; grid-template-columns: 1fr; gap: 16px; margin: 20px 0;\">\n\n<div style=\"background: #fef3c7; border: 2px dashed #f59e0b; border-radius: 8px; padding: 16px; text-align: center; color: #000000;\">\n<strong>⚖️ LLM-as-Judge Evaluation (Section 3.4 - Optional)</strong><br>\n<em>Weighted rubrics, automated quality gates, and systematic testing</em>\n</div>\n\n</div>\n\n<div style=\"margin-top:16px; color:#15803d; padding:12px; background:#dcfce7; border-radius:6px; border-left:4px solid #22c55e;\">\n<strong>💡 Recommended Path:</strong> <br><br>\nThis module's <strong>core content (Sections 3.1-3.3) takes ~95 minutes</strong> and covers essential SDLC automation skills. <strong>Section 3.4 is optional</strong>—complete it when you need production-grade evaluation and quality gates (~40 additional minutes).\n</div>"
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": "### 🎨 Technique Spotlight: Strategic Combinations\n\nHere's how Module 2 tactics combine to solve real SDLC challenges:\n\n| **Technique** | **Purpose in SDLC Context** | **Applied In** |\n|---------------|----------------------------|----------------|\n| **Role Prompting** | Define reviewer/tester persona with domain expertise | Sections 3.2, 3.3 |\n| **Structured Inputs** | Organize code, requirements, and context for analysis | Sections 3.2, 3.3 |\n| **Task Decomposition** | Break reviews and test plans into systematic steps | Sections 3.2, 3.3 |\n| **Chain-of-Thought** | Ensure visible reasoning for traceability | Sections 3.2, 3.3 |\n| **Structured Outputs** | Format findings for automation and tooling | Sections 3.2, 3.3 |\n| **Prompt Templates** | Parameterize with `{{variables}}` for reuse | Sections 3.2, 3.3 |\n| **LLM-as-Judge** | Evaluate outputs with weighted rubrics | Section 3.4 (Optional) |\n\n#### 🔗 The Power of Strategic Combinations\n\nThe real skill isn't using tactics in isolation—it's knowing **which combinations solve which problems**:\n\n- **Code Review (Section 3.2):** Role prompting + structured inputs + task decomposition = comprehensive multi-dimensional reviews\n- **Test Generation (Section 3.3):** Structured inputs + chain-of-thought + structured outputs = thorough test specifications with ambiguity detection\n- **LLM-as-Judge (Section 3.4 - Optional):** Role prompting + structured rubrics + scoring logic = automated quality gates\n\nReady to build production-ready solutions? Let's dive in! 👇"
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": "## ✅ Setup Complete!\n\n<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:20px; border-radius:8px; margin:24px 0; color:#000000;\">\n<strong style=\"color:#166534;\">🎉 You're All Set!</strong><br><br>\n\nYour environment is configured and ready:\n\n✅ **AI Connection** - Tested and working<br>\n✅ **Setup Utilities** - Loaded and available<br>\n✅ **Activity Helpers** - Ready for hands-on practice<br>\n</div>\n\n### ⏭️ Next: Section 3.2 - Code Review Automation\n\n**[🚀 Open Section 3.2 now](./3.2-code-review-automation.ipynb)** to learn how to build production-ready code review templates.\n\n> The setup utilities will already be available - just run `from setup_utils import *` to continue."
+   "source": [
+    "---\n",
+    "\n",
+    "<div style=\"margin:24px 0; padding:20px 24px; background:linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%); border-radius:12px; border-left:5px solid #3b82f6; box-shadow:0 2px 8px rgba(0,0,0,0.1);\">\n",
+    "  <div style=\"color:#1e293b; font-size:0.85em; font-weight:600; text-transform:uppercase; letter-spacing:1px; margin-bottom:8px;\">⏭️ Next Section</div>\n",
+    "  <div style=\"color:#0f172a; font-size:1.15em; font-weight:700; margin-bottom:6px;\">Section 3.2: Code Review Automation</div>\n",
+    "  <div style=\"color:#475569; font-size:0.95em; line-height:1.5; margin-bottom:12px;\">Learn how to combine tactics strategically to build production-ready code review templates.</div>\n",
+    "  <a href=\"./3.2-code-review-automation.ipynb\" style=\"display:inline-block; padding:8px 16px; background:#3b82f6; color:#fff; text-decoration:none; border-radius:6px; font-weight:600; font-size:0.9em; transition:all 0.2s;\">Continue to Section 3.2 →</a>\n",
+    "</div>\n",
+    "\n",
+    "> **💡 Tip:** The setup utilities are already loaded - just run `from setup_utils import *` to continue."
+   ]
   }
  ],
  "metadata": {
